# ESJ-project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  block_diagram_the_project_demo.graphml
data/: registrationDataBase.txt  userDataBase.txt  users.txt
data/weekHomework/ИУ5-25Б/: 1.txt  14.txt  15.txt  16.txt  17.txt  18.txt  7.txt  8.txt
src/: main.cpp
src/commands/: CMakeLists.txt  commands.cpp  commands.h
src/dataBase/: CMakeLists.txt  dataBase.cpp  dataBase.h  homeworkDataBase.cpp  homeworkDataBase.h  teacherDataBase.cpp  teacherDataBase.h  userDataBase.cpp  userDataBase.h
src/keybord/: CMakeLists.txt  keybord.cpp  keybord.h
src/keybords/: CMakeLists.txt  keybords.cpp
src/process/: CMakeLists.txt  process.cpp  process.h
src/user/: CMakeLists.txt  user.h
